Project 2/force-app/main/default/objects/Pokemon__c/fields/Fighter__c.field-meta.xml
<CustomField>
    <fullName>Fighter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fighter</label>
    <type>Checkbox</type>
</CustomField>