Project 2/force-app/main/default/objects/Pokemon__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>ImageURL</label>
    <length>150</length>
    <type>Text</type>
</CustomField>