Project 2/force-app/main/default/objects/Pokemon__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pokemon</relationshipLabel>
    <relationshipName>Pokemon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>