Project 2/force-app/main/default/objects/Pokemon__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&apos;Normal&apos;</defaultValue>
    <label>Type</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>