Project 2/force-app/main/default/objects/Pokemon__c/fields/Win_Loss__c.field-meta.xml
<CustomField>
    <fullName>Win_Loss__c</fullName>
    <description>Wins divided by Losses</description>
    <formula>Wins__c  /  Losses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Win/Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>