Project 2/force-app/main/default/objects/Pokemon__c/fields/Wins__c.field-meta.xml
<CustomField>
    <fullName>Wins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wins</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>